2006-03-22  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* Makefile.in (install-metadata): Append preview/auto.el to start
	file if configured with preview-latex.

2006-03-20  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex.el (LaTeX-insert-environment): Do not polute the kill
	ring.

2006-03-15  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex.el (TeX-latex-mode): Set up tool bar correctly for XEmacs
	and activate it for every buffer in Emacs.  Run mode hooks as late
	as possible.

2006-03-14  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Check for `make' and abort if not present.  Use
	`AC_PROG_MAKE_SET' instead of deprecated `AC_SET_MAKE'.

	* latex.el (LaTeX-common-initialization): Add \dots to supported
	TeX symbols.

2006-03-13  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* tex.el (TeX-mode-map): Change `C-c ?' binding from
	`describe-mode' to `TeX-doc'.
	(TeX-common-menu-entries): Add `Find Documentation...' entry for
	`TeX-doc'.
	(plain-TeX-menu-entries): Remove space before ellipsis.
	(TeX-doc-backend-alist): Make texdoc backend available in all
	modes.

	* latex.el (LaTeX-mode-menu): Remove space before ellipsis.

	* doc/changes.texi: Advertise cleaning and documentation finding
	functionality.

2006-03-07  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* tex-buf.el (TeX-next-error, TeX-active-buffer): Get master from
	the command buffer.
	(TeX-error, TeX-warning): Do not set `TeX-master' but set
	`TeX-command-buffer' to the right value instead.

2006-02-17  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* tex-buf.el (TeX-error-description-list): Fix error messages.
	Changed from `documentstyle' to `documentclass'.  The duplicated
	entries `counter too large' are combined.  Add the name of
	referenced book and the section number to the entry `Missing \\$
	inserted'.

	* tex-jp.el (TeX-error-description-list): Likewise.

2006-02-16  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* tex.el (TeX-master): Mark as safe.

2006-02-09  Ralf Angeli  <angeli@iwi.uni-sb.de>
